# badgery

./: .badgery.yaml  .gitignore  AUDIT_ISSUES.md  AUDIT_RECOMMENDATIONS.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: backmerge-pr.yaml  build-dashboard.yaml  coverage.yaml  create-release-pr.yml  dashboard-trigger.yaml  dashboard.yaml  draft-release-notes.yaml  labels.yaml  make-badges.yaml  quality.yaml  release-notes.yaml  release-pr.yaml  security.yaml  test-code.yaml  test.yaml
knowledge/roadmap/: milestones.md
src/: badgery.py
src/badgery/: __init__.py  __main__.py  badges.py  cli.py  config.py  metrics.py  render.py
src/badgery/_metrics/: base.py  codecov.py  codefactor.py  complexity.py  counts.py  docstring.py  loc.py  maintainability.py  workflow.py
tests/: conftest.py
tests/unit/badgery/: test_badges.py  test_config.py  test_renderer_utils.py
tests/unit/badgery/cli/: test_cli_disabled_card_skip.py  test_cli_env_fallbacks.py  test_cli_glob_resolution.py  test_cli_main_exceptions.py  test_cli_parse_args.py
tests/unit/badgery/config/: test_build_metrics_aliases.py  test_config_edges.py  test_load_cards_inline.py  test_settings_cards_absent_and_defaults.py
tests/unit/badgery/main/: test_module_entrypoint.py
tests/unit/badgery/metrics/: test_feature_branch_detection.py  test_loc_nested_and_errors.py  test_metric_error_paths_and_formatters.py  test_metrics.py  test_metrics_core.py
tests/unit/badgery/render/: test_fetch_and_codecov_percent.py  test_fetch_success_and_status_variants.py  test_loc_ratio_thresholds.py  test_render_end_to_end.py  test_renderer_misc.py  test_renderer_status_text.py
tools/: update_spdx.py
